prometheus_grafana/k8s/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xxxxx-prometheus-grafana
  namespace: xxxxx
spec:
  selector:
    xxxxx-app: xxxxx-prometheus
  ports:
    - name: prometheus
      protocol: TCP
      port: 9090
      targetPort: 9090
    - name: grafana
      protocol: TCP
      port: 3000
      targetPort: 3000
